--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: 2.24.2
   flutter_screenutil: any
-  get: ^4.6.6
+  get: any
+  shared_preferences: ^2.2.2
+  google_fonts: any
 
 
 dev_dependencies:
@@ -63,9 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
