--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: any
   firebase_auth: ^4.15.3
+  fluttertoast: ^8.2.4
 
 
 dev_dependencies:
